--- a/nyc-env/pyvenv.cfg
+++ b/nyc-env/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = C:\ProgramData\Anaconda3
+home = C:\Users\Asus\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
-version = 3.9.13
+version = 3.11.9
+executable = C:\Users\Asus\AppData\Local\Programs\Python\Python311\python.exe
+command = C:\Users\Asus\AppData\Local\Programs\Python\Python311\python.exe -m venv D:\Project\data nyc taxi fare prediction\nyc-taxi-fare-prediction\nyc-env
